#157 : [EFF-003] Ajout joueur : Né en

--- a/src/app/components/i18n/effective/en.json
+++ b/src/app/components/i18n/effective/en.json
@@ -92,7 +92,7 @@
     "playerGenderF": "Female",
     "playerBirthdate": "Birthdate",
     "playerBirthCity": "BirthCity",
-    "playerNationality": "Born in",
+    "playerNationality": "Nationality",
     "playerCaracterSection": "Player characteristics",
     "playerPositionType": "Position",
     "playerWeight": "Weight (lb)",
