--- a/src/app/components/i18n/effective/fr.json
+++ b/src/app/components/i18n/effective/fr.json
@@ -91,7 +91,7 @@
     "playerGenderF": "Femme",
     "playerBirthdate": "Date de naissance",
     "playerBirthCity": "Ville de naissance",
-    "playerNationality": "Pays de naissance",
+    "playerNationality": "Nationalité",
     "playerCaracterSection": "Caractéristiques",
     "playerPositionType": "Poste",
     "playerWeight": "Poids (kg)",
