#154 : [EFF-003] Ajout joueur : caractères non autorisés dans le prénom

--- a/src/app/components/i18n/effective/en.json
+++ b/src/app/components/i18n/effective/en.json
@@ -115,7 +115,8 @@
     "BirthDate": "Birthdate is mandatory",
     "Gender": "Gender is mandatory",
     "emailDirty": "Mail format invalid",
-    "PositionType": "Position is mandatory"
+    "PositionType": "Position is mandatory",
+    "wrong-char": "Wrong chars"
   },
   "mainTeam": {
     "title": "Teams of effective"
