--- a/src/app/components/i18n/public/fr.json
+++ b/src/app/components/i18n/public/fr.json
@@ -8,7 +8,7 @@
     "contact": {
       "email": "Contactez-nous",
       "visit": "Rendez-nous visite",
-      "about": "Qui sommes nous ?",
+      "about": "A propos",
       "popin": {
         "title": "Inscrivez vous à la newsletter",
         "email": "E-mail",
