--- a/src/app/components/i18n/feedback/fr.json
+++ b/src/app/components/i18n/feedback/fr.json
@@ -34,7 +34,7 @@
     },
     "submit-success": {
       "heading" : "Merci pour votre feedback. Nous regardons attentivement chacun d'eux",
-      "sub" : "Nous ne pouvons pas répondre individuellement à chcun, mais nous utiliserons votre commentaire pour améliorer votre expérience."
+      "sub" : "Nous ne pouvons pas répondre individuellement à chacun, mais nous utiliserons votre commentaire pour améliorer votre expérience."
     }
   }
 }
