#mant0000078: [PRO-001] Incohérence de champs avec l'inscription

--- a/src/app/components/i18n/user/fr.json
+++ b/src/app/components/i18n/user/fr.json
@@ -55,7 +55,7 @@
                 "address": "Adresse",
                 "birthdate": "Date de naissance",
                 "gender": {
-                    "title" : "Genre",
+                    "title" : "Civilité",
                     "female" : "Femme",
                     "male" : "Homme"
                 }
